--- a/index.html
+++ b/index.html
@@ -7,87 +7,235 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
-html, body { margin:0; height:100%; font-family:'Saira',sans-serif; background:#000; overflow:hidden; }
+/* global */
 * { box-sizing:border-box; }
+html,body { height:100%; margin:0; }
+body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
+#license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay,
+#vr-button, #top-qr-button { user-select: none; }
+body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; }
+
+/* panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
-/* Panels */
-.panel { position:fixed; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.2); backdrop-filter:blur(10px); color:#fff; text-align:center; border-radius:12px; padding:12px; z-index:20; display:none; }
-#hotspot-panel { top:12px; max-width:80%; font-size:0.95rem; }
-#video-link-panel { top:76px; max-width:66%; cursor:pointer; font-size:0.96rem; }
-#overlay { inset:0; background:rgba(0,0,0,0.4); display:flex; align-items:center; justify-content:center; z-index:40; }
-#overlay-content { background: rgba(255,255,255,0.18); backdrop-filter: blur(10px); border-radius:18px; padding:24px; max-width:40vw; max-height:70vh; display:flex; flex-direction:column; justify-content:space-between; text-align:center; color:#fff; font-size:1rem; line-height:1.4; }
-#overlay-content p, #overlay-content div { margin:6px 0; }
-#instructions-list p { margin:6px 0; }
+/* License bar */
+#license-bar {
+  position: fixed;
+  bottom: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 92%;
+  background: rgba(0,0,0,0.18);
+  backdrop-filter: blur(10px);
+  color: #fff;
+  padding: 10px 18px;
+  font-size: 13px;
+  z-index: 12;
+  overflow-y: auto;
+  text-align: center;
+  white-space: pre-wrap;
+  border-radius: 12px;
+}
+
+/* Intro overlay - center panel */
+#overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.40);
+  display:flex; align-items:center; justify-content:center;
+  z-index:40;
+}
+#overlay[aria-hidden="true"] { display:none; }
+#overlay-content {
+  width: 40vw; 
+  max-width: 90vw;
+  height: auto;
+  background: rgba(255,255,255,0.18);
+  backdrop-filter: blur(10px);
+  padding:28px;
+  border-radius:18px;
+  color:#fff;
+  text-align:center;
+  font-size:1.05rem;
+  line-height:1.4;
+  pointer-events:auto;
+  display:flex; flex-direction:column; justify-content:center;
+  gap:12px;
+}
+
+/* Instructions */
+#instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
+#instructions-list { text-align:center; margin-top:8px; max-width:480px; line-height:1.6em; color:#fff; }
+#instructions-list p { margin:6px 0 0 0; }
+
+/* Dismiss message line */
+#dismiss-message { margin-top:12px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
 
 /* tooltip preview */
-#tooltip-preview { display:none; position:fixed; background:rgba(0,0,0,0.9); color:#fff; text-align:center; padding:10px; border-radius:10px; z-index:9999; font-size:0.85rem; line-height:1.2; }
-#tooltip-preview img { width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px; }
+#tooltip-preview {
+  display:none;
+  position: fixed;
+  width: 280px;
+  background: rgba(0,0,0,0.9);
+  color:#fff;
+  text-align:center;
+  padding:10px;
+  border-radius:10px;
+  z-index:9999;
+  pointer-events:auto;
+  font-size:0.85rem;
+  line-height:1.2;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+}
+#tooltip-preview img { width:100%; height:auto; border-radius:8px; }
 
-/* QR overlay */
-#qr-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
-#qr-content { background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); border-radius:16px; padding:16px; display:flex; flex-direction:column; align-items:center; justify-content:center; width:26vw; max-width:300px; height:auto; }
-#qr-content img { width:60%; height:auto; }
-#qr-content p { margin-top:12px; font-size:0.95rem; color:#d0d0d0; }
+/* hotspot panel */
+#hotspot-panel {
+  position: fixed;
+  top: 12px;
+  left:50%;
+  transform: translateX(-50%);
+  background: rgba(0,0,0,0.20);
+  backdrop-filter: blur(10px);
+  padding:12px 18px;
+  border-radius:14px;
+  color:#fff;
+  font-size:0.98rem;
+  text-align:center;
+  max-width:82%;
+  z-index:20;
+  display:none;
+  gap:6px;
+}
 
-/* YouTube overlay */
-#youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
-#youtube-content { background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); border-radius:16px; padding:12px; max-width:90%; width:880px; max-height:80%; height:480px; display:flex; flex-direction:column; align-items:center; justify-content:center; }
+/* 360 video panel */
+#video-link-panel {
+  position: fixed;
+  top: calc(12px + 50px + 12px); /* small gap under hotspot panel */
+  left:50%;
+  transform:translateX(-50%);
+  background: rgba(0,0,0,0.20);
+  backdrop-filter: blur(10px);
+  padding:10px 14px;
+  border-radius:12px;
+  color:#fff;
+  font-size:0.96rem;
+  text-align:center;
+  max-width:66%;
+  z-index:20;
+  cursor:pointer;
+  display:none;
+}
+
+/* youtube modal */
+#youtube-overlay {
+  display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
+  z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
+}
+#youtube-content {
+  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
+  border-radius:16px; padding:12px;
+  max-width:90%; width:880px; max-height:80%; height:480px;
+  display:flex; flex-direction:column; align-items:center; justify-content:center;
+}
 #youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
 
-/* Buttons */
-#top-qr-button, #vr-button { position:fixed; right:12px; padding:8px 12px; border-radius:12px; background:rgba(0,0,0,0.18); backdrop-filter:blur(8px); color:#fff; z-index:80; cursor:pointer; font-size:0.95rem; }
+/* QR overlay */
+#qr-overlay {
+  display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
+  z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
+}
+#qr-content {
+  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
+  border-radius:16px; padding:16px;
+  width: auto; max-width:30vw;
+  height: auto; max-height:70vh;
+  display:flex; flex-direction:column; align-items:center; justify-content:center;
+  gap:12px;
+}
+#qr-content img { width:50%; max-width:100%; height:auto; border-radius:8px; }
+#qr-content p { color:#d0d0d0; margin-top:0; font-size:0.95rem; text-align:center; }
+
+/* QR and VR buttons */
+#top-qr-button, #vr-button {
+  position:fixed; right: 12px; padding:8px 12px; border-radius:12px;
+  background: rgba(0,0,0,0.18); backdrop-filter: blur(8px);
+  color:#fff; z-index:80; cursor:pointer; font-family:'Saira',sans-serif; font-size:0.95rem;
+}
 #top-qr-button { top:12px; }
 #vr-button { top:64px; display:none; }
 
-/* License bar */
-#license-bar { position: fixed; bottom:12px; left:50%; transform:translateX(-50%); max-width:92%; background: rgba(0,0,0,0.18); backdrop-filter: blur(10px); color: #fff; padding: 10px 18px; font-size: 13px; z-index:12; overflow-y:auto; text-align:center; white-space:pre-wrap; border-radius:12px; }
+/* responsive adjustments */
+@media (max-width:900px) {
+  #overlay-content { width:60vw; font-size:0.98rem; }
+  #qr-content { width:48vw; max-height:56vh; }
+  #video-link-panel { max-width:86%; top: calc(12px + 50px + 12px + 12px); }
+}
+@media (max-width:480px) {
+  #overlay-content { width:72vw; font-size:0.95rem; }
+  #qr-content { width:64vw; max-height:50vh; }
+  #hotspot-panel { font-size:0.9rem; padding:10px; }
+  #video-link-panel { font-size:0.95rem; top: calc(12px + 50px + 12px + 12px); max-width:88%; }
+}
 </style>
 </head>
 <body>
 
+<!-- Panorama container -->
 <div id="panorama"></div>
 
-<div id="overlay" role="dialog" aria-modal="true">
-  <div id="overlay-content">
-    <div>
-      <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-      <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
-      <div style="height:8px;"></div>
-      <div id="instructions-line">Instructions</div>
-      <div id="instructions-list">
-        <p>• Click and drag to look around.</p>
-        <p>• Scroll to zoom in/out.</p>
-        <p>• Use fullscreen button for best experience.</p>
-      </div>
-      <div style="height:16px;"></div>
-      <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
+<!-- Intro overlay -->
+<div id="overlay" role="dialog" aria-modal="true" aria-hidden="false">
+  <div id="overlay-content" role="document">
+    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
+    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+    <div style="height:12px;"></div>
+    <div id="instructions-line">Instructions</div>
+    <div id="instructions-list">
+      <p>• Click and drag to look around.</p>
+      <p>• Scroll to zoom in/out.</p>
+      <p>• Use fullscreen button for best experience.</p>
     </div>
+    <div style="height:12px;"></div>
+    <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
 
-<div id="tooltip-preview">
+<!-- Tooltip preview (hover) -->
+<div id="tooltip-preview" role="tooltip" aria-hidden="true">
   <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
-  <div><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
+  <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
-<div id="hotspot-panel" class="panel">Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>The Ritz-Carlton can be seen on the distant cliffs.<br>The coastal shores are lined with miles of golf courses.</div>
+<!-- Manhattan Beach panel -->
+<div id="hotspot-panel" aria-hidden="true">
+  Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
+  The Ritz-Carlton can be seen on the distant cliffs.<br>
+  The coastal shores are lined with miles of golf courses.
+</div>
 
-<div id="video-link-panel" class="panel"><span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span></div>
+<!-- 360 video link panel -->
+<div id="video-link-panel" aria-hidden="true">
+  <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
+</div>
 
+<!-- license bar -->
 <div id="license-bar">Loading license...</div>
 
-<button id="top-qr-button">QR</button>
-<button id="vr-button">VR</button>
+<!-- QR and VR buttons -->
+<button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
+<button id="vr-button" aria-hidden="true">VR</button>
 
-<div id="youtube-overlay">
+<!-- youtube overlay -->
+<div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
     <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
     <p style="color:#d0d0d0; margin-top:10px; font-size:0.95rem;">Click Anywhere to Dismiss this Video</p>
   </div>
 </div>
 
-<div id="qr-overlay">
+<!-- qr overlay -->
+<div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
     <p>Click Anywhere to Dismiss</p>
@@ -97,17 +245,17 @@ html, body { margin:0; height:100%; font-family:'Saira',sans-serif; background:#
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
 const panoURL = "https://i.imgur.com/FYdmUI3.jpeg";
+
 const viewer = pannellum.viewer('panorama', {
   type: 'equirectangular',
   panorama: panoURL,
-  autoLoad:true,
-  hfov:100,
-  showFullscreenCtrl:true,
-  showZoomCtrl:false,
-  compass:false
+  autoLoad: true,
+  hfov: 100,
+  showFullscreenCtrl: true,
+  showZoomCtrl: false,
+  compass: false
 });
 
-// element refs
 const overlay = document.getElementById('overlay');
 const overlayContent = document.getElementById('overlay-content');
 const hotspotPanel = document.getElementById('hotspot-panel');
@@ -123,72 +271,69 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-fetch('LICENSE').then(r => r.ok ? r.text() : Promise.reject('no')).then(text=>{licenseBar.textContent=text;}).catch(()=>licenseBar.textContent='LICENSE file not found.');
-
-// overlay dismiss: anywhere except 'here' link
-document.addEventListener('click', e=>{
-  if(!previewLink.matches(':hover') && !tooltip.matches(':hover') && !qrOverlay.matches(':hover') && !youtubeOverlay.matches(':hover')){
+/* Dismiss overlay on click anywhere except "here" link */
+document.addEventListener('click', (ev) => {
+  if (overlay.style.display !== 'none' && !ev.target.closest('#preview-link')) {
     overlay.style.display='none';
+    overlay.setAttribute('aria-hidden','true');
     hotspotPanel.style.display='block';
     videoLinkPanel.style.display='block';
-    hotspotPanel.classList.add('pulse-white');
-    setTimeout(()=>hotspotPanel.classList.remove('pulse-white'),2000);
-    // VR detection
-    detectVRHeadset().then(info=>{
-      if(info){ vrBtn.style.display='block'; vrBtn.setAttribute('aria-hidden','false'); }
-    });
   }
 });
 
-// preview hover
-function showTooltip(){
-  tooltip.style.display='block';
+/* Tooltip hover */
+function showTooltip() {
+  tooltip.style.display = 'block';
+  tooltip.setAttribute('aria-hidden','false');
   tooltip.offsetHeight;
-  const rect=previewLink.getBoundingClientRect();
-  const ttW=tooltip.offsetWidth, ttH=tooltip.offsetHeight;
-  let top=rect.top-ttH-10, left=rect.left+rect.width/2-ttW/2;
-  if(top<8) top=rect.bottom+10;
-  if(left<8) left=8;
-  if(left+ttW>window.innerWidth-8) left=window.innerWidth-ttW-8;
-  tooltip.style.left=Math.round(left)+'px';
-  tooltip.style.top=Math.round(top)+'px';
+  const rect = previewLink.getBoundingClientRect();
+  const ttWidth = tooltip.offsetWidth;
+  const ttHeight = tooltip.offsetHeight;
+  let top = rect.top - ttHeight - 10;
+  let left = rect.left + rect.width/2 - ttWidth/2;
+  if (top < 8) top = rect.bottom + 10;
+  if (left < 8) left = 8;
+  if (left + ttWidth > window.innerWidth - 8) left = window.innerWidth - ttWidth - 8;
+  tooltip.style.left = Math.round(left) + 'px';
+  tooltip.style.top = Math.round(top) + 'px';
 }
+
 previewLink.addEventListener('mouseenter', showTooltip);
-previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover') && !previewLink.matches(':hover')){ tooltip.style.display='none'; }},80); });
+previewLink.addEventListener('mouseleave', ()=> { tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
 tooltip.addEventListener('mouseenter', showTooltip);
-tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; });
+tooltip.addEventListener('mouseleave', ()=> { tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
+previewLink.addEventListener('click', (e)=>{ e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
+tooltipLink.addEventListener('click', (e)=>e.stopPropagation());
 
-// click 'here' opens new tab
-previewLink.addEventListener('click', e=>{ e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
-
-// video click
-videoLinkPanel.addEventListener('click', e=>{
+/* 360 video click -> YouTube */
+videoLinkPanel.addEventListener('click', (e)=>{
   e.stopPropagation();
   youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
   youtubeOverlay.style.display='flex';
-  requestAnimationFrame(()=>youtubeOverlay.style.opacity=1);
+  requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
 });
-youtubeOverlay.addEventListener('click', ()=>{
-  youtubeOverlay.style.opacity=0;
-  setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);
-});
+youtubeOverlay.addEventListener('click', ()=>{ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); });
 
-// QR overlay
-qrBtn.addEventListener('click', e=>{
-  e.stopPropagation();
-  qrOverlay.style.display='flex';
-  requestAnimationFrame(()=>qrOverlay.style.opacity=1);
-});
-qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',280); });
-qrContent.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',280); });
+/* QR overlay */
+qrBtn.addEventListener('click', (e)=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1); });
+qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300); });
+qrContent.addEventListener('click', (e)=> qrOverlay.style.opacity=0);
 
-// VR button
+/* VR detection and button */
 async function detectVRHeadset(){
-  if(navigator.xr && navigator.xr.isSessionSupported){ try{ if(await navigator.xr.isSessionSupported('immersive-vr')) return {manufacturer:'WebXR',model:'immersive-vr'};}catch(e){} }
-  const ua=navigator.userAgent||''; if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return {manufacturer:'Oculus',model:'Quest'};
-  return null;
+  if(navigator.xr && navigator.xr.isSessionSupported){
+    try{ const s=await navigator.xr.isSessionSupported('immersive-vr'); if(s) return true;}catch{}
+  }
+  return /OculusBrowser|Oculus|Quest|Meta Quest/i.test(navigator.userAgent);
 }
-vrBtn.addEventListener('click', e=>{ e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.'); });
+vrBtn.addEventListener('click',(e)=>{
+  e.stopPropagation();
+  const w=window.open('vr.html','_blank','noopener');
+  if(!w) alert('Popup blocked. Allow popups for immersive VR.');
+});
+
+/* LICENSE */
+fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(t=>licenseBar.textContent=t).catch(()=>{licenseBar.textContent='LICENSE file not found.'});
 </script>
 </body>
 </html>
