--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
-/* global */
 * { box-sizing:border-box; }
-html,body { height:100%; margin:0; }
+html,body { height:100%; margin:0; font-family:'Saira',sans-serif; overflow:hidden; background:#000; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
 #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay,
 #vr-button, #top-qr-button { user-select: none; }
-body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; }
 
-/* panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
-/* License bar */
 #license-bar {
   position: fixed;
   bottom: 12px;
@@ -31,47 +27,41 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   padding: 10px 18px;
   font-size: 13px;
   z-index: 12;
-  overflow-y: auto;
   text-align: center;
   white-space: pre-wrap;
   border-radius: 12px;
 }
 
-/* Intro overlay - center panel */
 #overlay {
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.40);
+  background: rgba(0,0,0,0.4);
   display:flex; align-items:center; justify-content:center;
   z-index:40;
 }
 #overlay[aria-hidden="true"] { display:none; }
+
 #overlay-content {
-  width: 40vw; 
-  max-width: 90vw;
-  height: auto;
+  max-width: 360px;
+  min-width: 260px;
+  width: 32vw;
+  max-height: 500px;
   background: rgba(255,255,255,0.18);
   backdrop-filter: blur(10px);
-  padding:28px;
+  padding:20px;
   border-radius:18px;
   color:#fff;
-  text-align:center;
-  font-size:1.05rem;
-  line-height:1.4;
-  pointer-events:auto;
-  display:flex; flex-direction:column; justify-content:center;
-  gap:12px;
+  display:flex; flex-direction:column; justify-content:space-between;
+  align-items:center; text-align:center;
 }
 
-/* Instructions */
+#overlay-content p { margin: 0 0 12px 0; color:#fff; }
 #instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
-#instructions-list { text-align:center; margin-top:8px; max-width:480px; line-height:1.6em; color:#fff; }
-#instructions-list p { margin:6px 0 0 0; }
+#instructions-list { text-align:center; margin-top:8px; line-height:1.6em; color:#fff; }
+#instructions-list p { margin:4px 0; }
 
-/* Dismiss message line */
-#dismiss-message { margin-top:12px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+#dismiss-message { margin-top:14px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
 
-/* tooltip preview */
 #tooltip-preview {
   display:none;
   position: fixed;
@@ -87,15 +77,13 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   line-height:1.2;
   box-shadow: 0 6px 18px rgba(0,0,0,0.6);
 }
-#tooltip-preview img { width:100%; height:auto; border-radius:8px; }
 
-/* hotspot panel */
 #hotspot-panel {
   position: fixed;
-  top: 12px;
+  top: 18px;
   left:50%;
   transform: translateX(-50%);
-  background: rgba(0,0,0,0.20);
+  background: rgba(0,0,0,0.2);
   backdrop-filter: blur(10px);
   padding:12px 18px;
   border-radius:14px;
@@ -105,16 +93,14 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   max-width:82%;
   z-index:20;
   display:none;
-  gap:6px;
 }
 
-/* 360 video panel */
 #video-link-panel {
   position: fixed;
-  top: calc(12px + 50px + 12px); /* small gap under hotspot panel */
+  top: 108px;
   left:50%;
   transform:translateX(-50%);
-  background: rgba(0,0,0,0.20);
+  background: rgba(0,0,0,0.2);
   backdrop-filter: blur(10px);
   padding:10px 14px;
   border-radius:12px;
@@ -127,7 +113,6 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   display:none;
 }
 
-/* youtube modal */
 #youtube-overlay {
   display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
   z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
@@ -140,23 +125,32 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 }
 #youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
 
-/* QR overlay */
 #qr-overlay {
   display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
   z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
 }
 #qr-content {
-  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
-  border-radius:16px; padding:16px;
-  width: auto; max-width:30vw;
-  height: auto; max-height:70vh;
-  display:flex; flex-direction:column; align-items:center; justify-content:center;
-  gap:12px;
+  background: rgba(255,255,255,0.14);
+  backdrop-filter: blur(10px);
+  border-radius: 16px;
+  padding: 16px;
+  width:auto;
+  height:auto;
+  max-width:90%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
 }
-#qr-content img { width:50%; max-width:100%; height:auto; border-radius:8px; }
-#qr-content p { color:#d0d0d0; margin-top:0; font-size:0.95rem; text-align:center; }
+#qr-content img {
+  width:25vw;
+  max-width:200px;
+  height:auto;
+  border-radius:8px;
+  margin-bottom:12px;
+}
+#qr-content p { color:#d0d0d0; margin:0; font-size:0.95rem; text-align:center; }
 
-/* QR and VR buttons */
 #top-qr-button, #vr-button {
   position:fixed; right: 12px; padding:8px 12px; border-radius:12px;
   background: rgba(0,0,0,0.18); backdrop-filter: blur(8px);
@@ -165,68 +159,51 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 #top-qr-button { top:12px; }
 #vr-button { top:64px; display:none; }
 
-/* responsive adjustments */
-@media (max-width:900px) {
-  #overlay-content { width:60vw; font-size:0.98rem; }
-  #qr-content { width:48vw; max-height:56vh; }
-  #video-link-panel { max-width:86%; top: calc(12px + 50px + 12px + 12px); }
-}
-@media (max-width:480px) {
-  #overlay-content { width:72vw; font-size:0.95rem; }
-  #qr-content { width:64vw; max-height:50vh; }
-  #hotspot-panel { font-size:0.9rem; padding:10px; }
-  #video-link-panel { font-size:0.95rem; top: calc(12px + 50px + 12px + 12px); max-width:88%; }
-}
 </style>
 </head>
 <body>
 
-<!-- Panorama container -->
 <div id="panorama"></div>
 
-<!-- Intro overlay -->
-<div id="overlay" role="dialog" aria-modal="true" aria-hidden="false">
+<div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
     <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
-    <div style="height:12px;"></div>
+
+    <div style="height:8px;"></div>
+
     <div id="instructions-line">Instructions</div>
     <div id="instructions-list">
       <p>• Click and drag to look around.</p>
       <p>• Scroll to zoom in/out.</p>
       <p>• Use fullscreen button for best experience.</p>
     </div>
-    <div style="height:12px;"></div>
+
+    <div style="height:14px;"></div>
     <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
 
-<!-- Tooltip preview (hover) -->
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
-  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
+  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview" style="width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px;">
   <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
-<!-- Manhattan Beach panel -->
 <div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
-<!-- 360 video link panel -->
 <div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
-<!-- license bar -->
 <div id="license-bar">Loading license...</div>
 
-<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
-<!-- youtube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
     <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
@@ -234,7 +211,6 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   </div>
 </div>
 
-<!-- qr overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -245,7 +221,6 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
 const panoURL = "https://i.imgur.com/FYdmUI3.jpeg";
-
 const viewer = pannellum.viewer('panorama', {
   type: 'equirectangular',
   panorama: panoURL,
@@ -271,69 +246,55 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-/* Dismiss overlay on click anywhere except "here" link */
-document.addEventListener('click', (ev) => {
-  if (overlay.style.display !== 'none' && !ev.target.closest('#preview-link')) {
-    overlay.style.display='none';
-    overlay.setAttribute('aria-hidden','true');
-    hotspotPanel.style.display='block';
-    videoLinkPanel.style.display='block';
+overlay.addEventListener('click', ev => {
+  if (ev.target.closest && ev.target.closest('#overlay-content')) {
+    if(ev.target === previewLink) return; // ignore hyperlink
+    // otherwise allow overlay-content to be dismiss zone
   }
+  overlay.setAttribute('aria-hidden','true'); overlay.style.display='none';
+  hotspotPanel.style.display='block'; videoLinkPanel.style.display='block';
 });
 
-/* Tooltip hover */
-function showTooltip() {
-  tooltip.style.display = 'block';
-  tooltip.setAttribute('aria-hidden','false');
-  tooltip.offsetHeight;
-  const rect = previewLink.getBoundingClientRect();
-  const ttWidth = tooltip.offsetWidth;
-  const ttHeight = tooltip.offsetHeight;
-  let top = rect.top - ttHeight - 10;
-  let left = rect.left + rect.width/2 - ttWidth/2;
-  if (top < 8) top = rect.bottom + 10;
-  if (left < 8) left = 8;
-  if (left + ttWidth > window.innerWidth - 8) left = window.innerWidth - ttWidth - 8;
-  tooltip.style.left = Math.round(left) + 'px';
-  tooltip.style.top = Math.round(top) + 'px';
-}
+previewLink.addEventListener('click', e => { e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
+previewLink.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
+previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } },80); });
+tooltip.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
+tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
+tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
 
-previewLink.addEventListener('mouseenter', showTooltip);
-previewLink.addEventListener('mouseleave', ()=> { tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-tooltip.addEventListener('mouseenter', showTooltip);
-tooltip.addEventListener('mouseleave', ()=> { tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-previewLink.addEventListener('click', (e)=>{ e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
-tooltipLink.addEventListener('click', (e)=>e.stopPropagation());
-
-/* 360 video click -> YouTube */
-videoLinkPanel.addEventListener('click', (e)=>{
+videoLinkPanel.addEventListener('click', e=>{
   e.stopPropagation();
   youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
   youtubeOverlay.style.display='flex';
-  requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
+  requestAnimationFrame(()=> youtubeOverlay.style.opacity = 1);
 });
-youtubeOverlay.addEventListener('click', ()=>{ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); });
+youtubeOverlay.addEventListener('click', ()=>{
+  youtubeOverlay.style.opacity=0;
+  setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);
+});
 
-/* QR overlay */
-qrBtn.addEventListener('click', (e)=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1); });
-qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300); });
-qrContent.addEventListener('click', (e)=> qrOverlay.style.opacity=0);
+qrBtn.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=> qrOverlay.style.opacity=1); });
+qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
+qrContent.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
 
-/* VR detection and button */
+fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(t=>licenseBar.textContent=t).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
+
 async function detectVRHeadset(){
   if(navigator.xr && navigator.xr.isSessionSupported){
-    try{ const s=await navigator.xr.isSessionSupported('immersive-vr'); if(s) return true;}catch{}
+    try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return { manufacturer:'WebXR', model:'immersive-vr'};}catch{}
   }
-  return /OculusBrowser|Oculus|Quest|Meta Quest/i.test(navigator.userAgent);
+  const ua = navigator.userAgent||'';
+  if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return { manufacturer:'Oculus', model:'Quest'};
+  return null;
 }
-vrBtn.addEventListener('click',(e)=>{
-  e.stopPropagation();
-  const w=window.open('vr.html','_blank','noopener');
-  if(!w) alert('Popup blocked. Allow popups for immersive VR.');
-});
+vrBtn.addEventListener('click', e=>{ e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.'); });
 
-/* LICENSE */
-fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(t=>licenseBar.textContent=t).catch(()=>{licenseBar.textContent='LICENSE file not found.'});
+document.addEventListener('keydown', e=>{
+  if(e.key==='Escape'){
+    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);}
+    if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280);}
+  }
+});
 </script>
 </body>
 </html>
